[package]
name = "flow"
version = "0.2.0"
edition = "2024"
default-run = "flow"

[workspace]
members = [".", "xtask"]

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }

[features]
__gen = ["dep:clap_complete", "dep:clap_mangen"]

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.86"
clap = { workspace = true }
clap-verbosity-flag = "3.0.0"
clap_complete = { version = "4.5.38", optional = true }
clap_mangen = { version = "0.2.24", optional = true }
either = "1.13.0"
env_logger = { version = "0.11.5", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "async-await",
] }
itertools = "0.14.0"
libc = "0.2.161"
log = "0.4.21"
nix = { version = "0.29.0", features = ["user"] }
num-integer = "0.1.46"
postcard = { version = "1.0.10", default-features = false, features = [
  "use-std",
] }
replace_with = "0.1.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
smallvec = { version = "1.13.2", features = [
  "union",
  "const_generics",
  "const_new",
  "serde",
] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "2.0.0"
tokio = { version = "1.38.0", features = [
  "rt",
  "net",
  "macros",
  "io-util",
  "signal",
  "sync",
  "time",
] }
tokio-util = "0.7.11"

[target.'cfg(target_os = "linux")'.dependencies]
nftables = { version = "0.6.0", features = ["tokio"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
rtnetlink = { git = "https://github.com/hack3ric/rust-rtnetlink", branch = "for-flow" }

[build-dependencies]
cfg_aliases = "0.2.1"

[dev-dependencies]
async-tempfile = "0.6.0"
macro_rules_attribute = "0.2.0"
nix = { version = "0.29.0", features = ["net"] }
rand = "0.9.0"
test-case = "3.3.1"
tokio = { version = "1.38.0", features = ["time"] }
version-compare = "0.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
